--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,13 +5,16 @@ pages_build_output_dir = "dist/public"
 [vars]
 NODE_ENV = "production"
 
-[[d1_databases]]
+[env.production]
+vars = { NODE_ENV = "production" }
+[[env.production.d1_databases]]
 binding = "DB"
 database_name = "mate-music-db"
 database_id = "placeholder"
 
-[env.production]
-vars = { NODE_ENV = "production" }
-
 [env.preview]
 vars = { NODE_ENV = "preview" }
+[[env.preview.d1_databases]]
+binding = "DB"
+database_name = "mate-music-db"
+database_id = "placeholder"
