--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "db:seed:d1": "bash scripts/seed-d1.sh",
     "cf:deploy": "npm run build:cf && wrangler pages deploy dist/public",
     "cf:dev": "wrangler pages dev dist/public --compatibility-flags nodejs_compat"
+    "preinstall": "npm rebuild esbuild",
+    "build": "vite build",
+    "dev": "vite"
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20251011.0",
