--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.18.1",
-    "esbuild": "^0.25.10",
+    "esbuild": "0.25.10",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
@@ -125,5 +125,9 @@
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
+  }
+  "engines": {
+  "node": "22.x",
+  "npm": "10.x"
   }
 }
