--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev": "npx vite",
     "dev:wrangler": "wrangler pages dev dist/public --compatibility-date=2025-01-15 --d1=DB",
-    "build": "vite build",
-    "build:cf": "vite build && npm run build:functions",
-    "build:functions": "esbuild functions/**/*.ts --bundle --outdir=dist/functions --format=esm --external:@cloudflare/* --platform=browser",
-    "vercel-build": "vite build",
+    "build": "npx vite build",
+    "build:cf": "npx vite build && npm run build:functions",
+    "build:functions": "npx esbuild functions/**/*.ts --bundle --outdir=dist/functions --format=esm --external:@cloudflare/* --platform=browser",
+    "vercel-build": "npx vite build",
     "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push",
-    "db:migrate:d1": "drizzle-kit generate --config=drizzle.config.d1.ts && wrangler d1 migrations apply mate-music-db --local",
+    "check": "npx tsc",
+    "db:push": "npx drizzle-kit push",
+    "db:migrate:d1": "npx drizzle-kit generate --config=drizzle.config.d1.ts && wrangler d1 migrations apply mate-music-db --local",
     "db:seed:d1": "bash scripts/seed-d1.sh",
     "cf:deploy": "npm run build:cf && wrangler pages deploy dist/public",
     "cf:dev": "wrangler pages dev dist/public --compatibility-flags nodejs_compat",
@@ -129,4 +129,3 @@
     "npm": "10.x"
   }
   }
-    
