--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "preinstall": "npm rebuild esbuild"
   },
   "dependencies": {
+    "vite": "^7.1.10",
+    "esbuild": "0.25.10",
+    "typescript": "5.6.3",
+    "tsx": "^4.20.5",
+
     "@cloudflare/workers-types": "^4.20251011.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -97,30 +102,6 @@
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
-  "devDependencies": {
-    "@replit/vite-plugin-cartographer": "^0.3.1",
-    "@replit/vite-plugin-dev-banner": "^0.1.1",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/connect-pg-simple": "^7.0.3",
-    "@types/express": "4.17.21",
-    "@types/express-session": "^1.18.0",
-    "@types/node": "^20.16.11",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
-    "@types/react": "^18.3.26",
-    "@types/react-dom": "^18.3.7",
-    "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.18.1",
-    "esbuild": "0.25.10",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.20.5",
-    "typescript": "5.6.3",
-    "vite": "^7.1.10"
-  },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
   },
@@ -128,5 +109,4 @@
     "node": "22.x",
     "npm": "10.x"
   }
-  }
-  
+}
