--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "db:migrate:d1": "npx drizzle-kit generate --config=drizzle.config.d1.ts && wrangler d1 migrations apply mate-music-db --local",
     "db:seed:d1": "bash scripts/seed-d1.sh",
     "cf:deploy": "npm run build:cf && wrangler pages deploy dist/public",
-    "cf:dev": "wrangler pages dev dist/public --compatibility-flags nodejs_compat",
-    "preinstall": "npm rebuild esbuild"
+    "cf:dev": "wrangler pages dev dist/public --compatibility-flags nodejs_compat"
   },
   "dependencies": {
     "vite": "^7.1.10",
@@ -109,4 +108,4 @@
     "node": "22.x",
     "npm": "10.x"
   }
-}
+  }
