--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "db:migrate:d1": "npx drizzle-kit generate --config=drizzle.config.d1.ts && wrangler d1 migrations apply mate-music-db --local",
     "db:seed:d1": "bash scripts/seed-d1.sh",
     "cf:deploy": "npm run build:cf && wrangler pages deploy dist/public",
-    "cf:dev": "wrangler pages dev dist/public --compatibility-flags nodejs_compat",
-    "preinstall": "npm rebuild esbuild"
+    "cf:dev": "wrangler pages dev dist/public --compatibility-flags nodejs_compat"
   },
   "dependencies": {
     "vite": "^7.1.10",
@@ -83,9 +82,9 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "postgres": "^3.4.7",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
@@ -108,3 +107,4 @@
     "npm": "10.x"
   }
 }
+  
