--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "vite": "^7.1.10",
+    "@vitejs/plugin-react": "^4.7.0",
     "esbuild": "0.25.10",
     "typescript": "5.6.3",
     "tsx": "^4.20.5",
