--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,16 +5,16 @@ pages_build_output_dir = "dist/public"
 [vars]
 NODE_ENV = "production"
 
-[env.production]
-vars = { NODE_ENV = "production" }
-[[env.production.d1_databases]]
+[[d1_databases]]
 binding = "DB"
 database_name = "mate-music-db"
 database_id = "placeholder"
 
+[build]
+command = "npm run build"
+
+[env.production]
+vars = { NODE_ENV = "production" }
+
 [env.preview]
 vars = { NODE_ENV = "preview" }
-[[env.preview.d1_databases]]
-binding = "DB"
-database_name = "mate-music-db"
-database_id = "placeholder"
