--- a/package.json
+++ b/package.json
@@ -4,21 +4,25 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "NODE_ENV=development tsx server/index.ts",
+    "dev": "npx vite",
     "dev:wrangler": "wrangler pages dev dist/public --compatibility-date=2025-01-15 --d1=DB",
-    "build": "vite build",
-    "build:cf": "vite build && npm run build:functions",
-    "build:functions": "esbuild functions/**/*.ts --bundle --outdir=dist/functions --format=esm --external:@cloudflare/* --platform=browser",
-    "vercel-build": "vite build",
+    "build": "npx vite build",
+    "build:functions": "npx esbuild functions/**/*.ts --bundle --outdir=dist/functions --format=esm --external:@cloudflare/* --platform=browser",
+    "build:cf": "npm run build && npm run build:functions",
     "start": "NODE_ENV=production node dist/index.js",
-    "check": "tsc",
-    "db:push": "drizzle-kit push",
-    "db:migrate:d1": "drizzle-kit generate --config=drizzle.config.d1.ts && wrangler d1 migrations apply mate-music-db --local",
+    "check": "npx tsc",
+    "db:push": "npx drizzle-kit push",
+    "db:migrate:d1": "npx drizzle-kit generate --config=drizzle.config.d1.ts && wrangler d1 migrations apply mate-music-db --local",
     "db:seed:d1": "bash scripts/seed-d1.sh",
     "cf:deploy": "npm run build:cf && wrangler pages deploy dist/public",
     "cf:dev": "wrangler pages dev dist/public --compatibility-flags nodejs_compat"
   },
   "dependencies": {
+    "vite": "^7.1.10",
+    "@vitejs/plugin-react": "^4.7.0",
+    "esbuild": "0.25.10",
+    "typescript": "5.6.3",
+    "tsx": "^4.20.5",
     "@cloudflare/workers-types": "^4.20251011.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -50,7 +54,7 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
-    "@vercel/node": "^5.4.0",
+    "@vercel/node": "^2.3.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -79,9 +83,9 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "postgres": "^3.4.7",
-    "react": "^18.3.1",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
     "react-resizable-panels": "^2.1.7",
@@ -96,31 +100,11 @@
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
-  "devDependencies": {
-    "@replit/vite-plugin-cartographer": "^0.3.1",
-    "@replit/vite-plugin-dev-banner": "^0.1.1",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/connect-pg-simple": "^7.0.3",
-    "@types/express": "4.17.21",
-    "@types/express-session": "^1.18.0",
-    "@types/node": "^20.16.11",
-    "@types/passport": "^1.0.16",
-    "@types/passport-local": "^1.0.38",
-    "@types/react": "^18.3.26",
-    "@types/react-dom": "^18.3.7",
-    "@types/ws": "^8.5.13",
-    "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.31.4",
-    "esbuild": "^0.25.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.20.5",
-    "typescript": "5.6.3",
-    "vite": "^5.4.20"
-  },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
+  },
+  "engines": {
+    "node": "22.x",
+    "npm": "10.x"
   }
 }
