--- a/package.json
+++ b/package.json
@@ -18,11 +18,6 @@
     "cf:dev": "wrangler pages dev dist/public --compatibility-flags nodejs_compat"
   },
   "dependencies": {
-    "vite": "^7.1.10",
-    "@vitejs/plugin-react": "^4.7.0",
-    "esbuild": "0.25.10",
-    "typescript": "5.6.3",
-    "tsx": "^4.20.5",
     "@cloudflare/workers-types": "^4.20251011.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -100,6 +95,16 @@
     "zod": "^3.24.2",
     "zod-validation-error": "^3.4.0"
   },
+  "devDependencies": {
+  "vite": "^7.1.10",
+  "@vitejs/plugin-react": "^4.7.0",
+  "typescript": "5.6.3",
+  "esbuild": "0.25.10",
+  "tsx": "^4.20.5",
+  "postcss": "^8.4.47",
+  "autoprefixer": "^10.4.20",
+  "tailwindcss": "^3.4.17"
+                    },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
   },
