--- a/package.json
+++ b/package.json
@@ -4,68 +4,42 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "npx vite",
+    "dev": "vite",
     "dev:wrangler": "wrangler pages dev dist/public --compatibility-date=2025-01-15 --d1=DB",
-    "build": "npx vite build",
-    "build:functions": "npx esbuild functions/**/*.ts --bundle --outdir=dist/functions --format=esm --external:@cloudflare/* --platform=browser",
+    "build": "vite build",
+    "build:functions": "esbuild functions/**/*.ts --bundle --outdir=dist/functions --format=esm --external:@cloudflare/* --platform=browser",
     "build:cf": "npm run build && npm run build:functions",
     "start": "NODE_ENV=production node dist/index.js",
-    "check": "npx tsc",
-    "db:push": "npx drizzle-kit push",
-    "db:migrate:d1": "npx drizzle-kit generate --config=drizzle.config.d1.ts && wrangler d1 migrations apply mate-music-db --local",
+    "check": "tsc",
+    "db:push": "drizzle-kit push",
+    "db:migrate:d1": "drizzle-kit generate --config=drizzle.config.d1.ts && wrangler d1 migrations apply mate-music-db --local",
     "db:seed:d1": "bash scripts/seed-d1.sh",
     "cf:deploy": "npm run build:cf && wrangler pages deploy dist/public",
     "cf:dev": "wrangler pages dev dist/public --compatibility-flags nodejs_compat"
   },
   "dependencies": {
     "@cloudflare/workers-types": "^4.20251011.0",
-    "@hookform/resolvers": "^3.10.0",
-    "@jridgewell/trace-mapping": "^0.3.25",
-    "@radix-ui/react-accordion": "^1.2.4",
-    "@radix-ui/react-alert-dialog": "^1.1.7",
-    "@radix-ui/react-aspect-ratio": "^1.1.3",
-    "@radix-ui/react-avatar": "^1.1.4",
-    "@radix-ui/react-checkbox": "^1.1.5",
-    "@radix-ui/react-collapsible": "^1.1.4",
-    "@radix-ui/react-context-menu": "^2.2.7",
     "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-hover-card": "^1.1.7",
     "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-menubar": "^1.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.6",
-    "@radix-ui/react-popover": "^1.1.7",
-    "@radix-ui/react-progress": "^1.1.3",
     "@radix-ui/react-radio-group": "^1.2.4",
-    "@radix-ui/react-scroll-area": "^1.2.4",
-    "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slider": "^1.2.4",
     "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-switch": "^1.1.4",
-    "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.7",
-    "@radix-ui/react-toggle": "^1.1.3",
-    "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
     "@vercel/node": "^2.3.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
     "connect-pg-simple": "^10.0.0",
-    "date-fns": "^3.6.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
-    "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
-    "framer-motion": "^11.13.1",
     "googleapis": "^161.0.0",
     "hono": "^4.10.1",
-    "input-otp": "^1.4.2",
     "jose": "^6.1.0",
     "lucide-react": "^0.453.0",
     "memoizee": "^0.4.17",
@@ -79,16 +53,10 @@
     "passport-local": "^1.0.0",
     "postgres": "^3.4.7",
     "react": "^18.2.0",
-    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.55.0",
     "react-icons": "^5.4.0",
-    "react-resizable-panels": "^2.1.7",
-    "recharts": "^2.15.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "tw-animate-css": "^1.2.5",
-    "vaul": "^1.1.2",
     "wouter": "^3.3.5",
     "wrangler": "^4.43.0",
     "ws": "^8.18.0",
@@ -96,20 +64,21 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-  "vite": "^7.1.10",
-  "@vitejs/plugin-react": "^4.7.0",
-  "typescript": "5.6.3",
-  "esbuild": "0.25.10",
-  "tsx": "^4.20.5",
-  "postcss": "^8.4.47",
-  "autoprefixer": "^10.4.20",
-  "tailwindcss": "^3.4.17"
-                    },
+    "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.20",
+    "drizzle-kit": "^0.31.5",
+    "esbuild": "^0.25.10",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.5",
+    "typescript": "^5.6.3",
+    "vite": "^7.1.10"
+  },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
   },
   "engines": {
-    "node": "22.x",
+    "node": "20.x",
     "npm": "10.x"
   }
 }
