--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,5 +13,15 @@ database_id = "placeholder"
 [env.production]
 vars = { NODE_ENV = "production" }
 
+[[env.production.d1_databases]]
+binding = "DB"
+database_name = "mate-music-db"
+database_id = "placeholder"
+
 [env.preview]
 vars = { NODE_ENV = "preview" }
+
+[[env.preview.d1_databases]]
+binding = "DB"
+database_name = "mate-music-db"
+database_id = "placeholder"
