--- a/package.json
+++ b/package.json
@@ -29,13 +29,17 @@
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
     "@vercel/node": "^2.3.0",
+    "@vitejs/plugin-react": "^4.7.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "connect-pg-simple": "^10.0.0",
     "dotenv": "^17.2.3",
+    "drizzle-kit": "^0.31.5",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "^0.7.0",
+    "esbuild": "^0.25.10",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "googleapis": "^161.0.0",
@@ -51,12 +55,16 @@
     "openid-client": "^6.8.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
+    "postcss": "^8.4.47",
     "postgres": "^3.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.6.3",
+    "vite": "^7.1.10",
     "wouter": "^3.3.5",
     "wrangler": "^4.43.0",
     "ws": "^8.18.0",
@@ -64,15 +72,7 @@
     "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.7.0",
-    "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.31.5",
-    "esbuild": "^0.25.10",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.17",
-    "tsx": "^4.20.5",
-    "typescript": "^5.6.3",
-    "vite": "^7.1.10"
+    "tsx": "^4.20.5"
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
