--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
 name = "mate-music-search"
 compatibility_date = "2025-01-15"
+compatibility_flags = ["nodejs_compat"]
 pages_build_output_dir = "dist/public"
 
 [vars]
