--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,7 +9,7 @@ NODE_ENV = "production"
 [[d1_databases]]
 binding = "DB"
 database_name = "mate-music-db"
-database_id = "placeholder"
+database_id = "fc1373a7-6dd4-4f4c-8b0b-8c5b674fef87"
 
 [env.production]
 vars = { NODE_ENV = "production" }
@@ -17,7 +17,7 @@ vars = { NODE_ENV = "production" }
 [[env.production.d1_databases]]
 binding = "DB"
 database_name = "mate-music-db"
-database_id = "placeholder"
+database_id = "fc1373a7-6dd4-4f4c-8b0b-8c5b674fef87"
 
 [env.preview]
 vars = { NODE_ENV = "preview" }
@@ -25,4 +25,4 @@ vars = { NODE_ENV = "preview" }
 [[env.preview.d1_databases]]
 binding = "DB"
 database_name = "mate-music-db"
-database_id = "placeholder"
+database_id = "fc1373a7-6dd4-4f4c-8b0b-8c5b674fef87"
